--- a/Level9/Level9/Level9.vcxproj
+++ b/Level9/Level9/Level9.vcxproj
@@ -127,19 +127,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ABC세기.cpp" />
+    <ClCompile Include="MAX_MIN좌표.cpp" />
+    <ClCompile Include="각각계산.cpp" />
+    <ClCompile Include="거리계산.cpp" />
+    <ClCompile Include="계산후출력.cpp" />
     <ClCompile Include="긴문장찾기.cpp" />
+    <ClCompile Include="동일문자여부.cpp" />
+    <ClCompile Include="동일비교.cpp" />
     <ClCompile Include="문자길이.cpp" />
     <ClCompile Include="문자따로빼기.cpp" />
     <ClCompile Include="문자뺴오기.cpp" />
     <ClCompile Include="문자위치.cpp" />
+    <ClCompile Include="배열비교.cpp" />
     <ClCompile Include="배열에서문자.cpp" />
     <ClCompile Include="배열에서숫자찾기.cpp" />
     <ClCompile Include="세문자카운팅.cpp" />
     <ClCompile Include="숫자더하기.cpp" />
+    <ClCompile Include="숫자찾기.cpp" />
     <ClCompile Include="원하는글자.cpp" />
     <ClCompile Include="이중for문.cpp" />
     <ClCompile Include="이중배열채우기.cpp" />
     <ClCompile Include="테두리.cpp" />
+    <ClCompile Include="포인터주소.cpp" />
     <ClCompile Include="한줄나열.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
