--- a/Level9/Level9/Level9.vcxproj.filters
+++ b/Level9/Level9/Level9.vcxproj.filters
@@ -87,5 +87,23 @@
     <ClCompile Include="ABC세기.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="한줄씩합.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="다운로드.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="구역좁히기.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="삼각형합.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="같은번호세기.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="내림차정렬.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
