--- a/Level9/Level9/Level9.vcxproj
+++ b/Level9/Level9/Level9.vcxproj
@@ -132,12 +132,14 @@
     <ClCompile Include="가격평균.cpp" />
     <ClCompile Include="각각계산.cpp" />
     <ClCompile Include="같은번호세기.cpp" />
+    <ClCompile Include="개구리문장.cpp" />
     <ClCompile Include="거리계산.cpp" />
     <ClCompile Include="거울문장.cpp" />
     <ClCompile Include="계산후출력.cpp" />
     <ClCompile Include="구역좁히기.cpp" />
     <ClCompile Include="긴문장찾기.cpp" />
     <ClCompile Include="내림차정렬.cpp" />
+    <ClCompile Include="다른문자세기.cpp" />
     <ClCompile Include="다운로드.cpp" />
     <ClCompile Include="동일문자여부.cpp" />
     <ClCompile Include="동일비교.cpp" />
@@ -146,21 +148,29 @@
     <ClCompile Include="문자따로빼기.cpp" />
     <ClCompile Include="문자뺴오기.cpp" />
     <ClCompile Include="문자위치.cpp" />
+    <ClCompile Include="문장길이.cpp" />
     <ClCompile Include="문장길이정렬.cpp" />
+    <ClCompile Include="문장합치기.cpp" />
+    <ClCompile Include="발견.cpp" />
     <ClCompile Include="배열비교.cpp" />
     <ClCompile Include="배열에서문자.cpp" />
     <ClCompile Include="배열에서숫자찾기.cpp" />
+    <ClCompile Include="배열줄정렬.cpp" />
     <ClCompile Include="배열하나로.cpp" />
+    <ClCompile Include="범인찾기.cpp" />
     <ClCompile Include="삼각형모양.cpp" />
     <ClCompile Include="삼각형합.cpp" />
     <ClCompile Include="세문자카운팅.cpp" />
     <ClCompile Include="숫자더하기.cpp" />
     <ClCompile Include="숫자쪼개기.cpp" />
     <ClCompile Include="숫자찾기.cpp" />
+    <ClCompile Include="오려내기.cpp" />
     <ClCompile Include="원하는글자.cpp" />
     <ClCompile Include="이중for문.cpp" />
     <ClCompile Include="이중while.cpp" />
+    <ClCompile Include="이중while출력.cpp" />
     <ClCompile Include="이중배열채우기.cpp" />
+    <ClCompile Include="제일긴문장.cpp" />
     <ClCompile Include="큰숫자.cpp" />
     <ClCompile Include="테두리.cpp" />
     <ClCompile Include="포인터.cpp" />
