--- a/CodingTest/훈련1/훈련1.vcxproj
+++ b/CodingTest/훈련1/훈련1.vcxproj
@@ -129,31 +129,47 @@
   <ItemGroup>
     <ClCompile Include="min값인덱스.cpp" />
     <ClCompile Include="M찾기.cpp" />
+    <ClCompile Include="값찾기.cpp" />
     <ClCompile Include="거리구하기.cpp" />
     <ClCompile Include="거리이동.cpp" />
     <ClCompile Include="글자바꾸기.cpp" />
+    <ClCompile Include="글자수.cpp" />
     <ClCompile Include="금고털이.cpp" />
+    <ClCompile Include="기차에서우리팀.cpp" />
     <ClCompile Include="꼬리찾기.cpp" />
     <ClCompile Include="누적점핑.cpp" />
     <ClCompile Include="누적합.cpp" />
+    <ClCompile Include="다수.cpp" />
     <ClCompile Include="대상발표.cpp" />
     <ClCompile Include="라인색칠.cpp" />
     <ClCompile Include="마스킹존재여부.cpp" />
     <ClCompile Include="마스킹출력.cpp" />
     <ClCompile Include="많은수.cpp" />
+    <ClCompile Include="몇층.cpp" />
     <ClCompile Include="문자제거.cpp" />
     <ClCompile Include="문장추가.cpp" />
     <ClCompile Include="범위안에존재여부.cpp" />
     <ClCompile Include="범위정하기.cpp" />
+    <ClCompile Include="블랙리스트.cpp" />
     <ClCompile Include="비트배열합.cpp" />
     <ClCompile Include="비트합.cpp" />
     <ClCompile Include="사각형출력.cpp" />
+    <ClCompile Include="알파벳정렬.cpp" />
+    <ClCompile Include="알파벳카운트.cpp" />
+    <ClCompile Include="양쪽수거리구하기.cpp" />
+    <ClCompile Include="없는숫자.cpp" />
+    <ClCompile Include="유령존재.cpp" />
     <ClCompile Include="저격sum.cpp" />
     <ClCompile Include="존재여부.cpp" />
     <ClCompile Include="주소넘기기.cpp" />
     <ClCompile Include="중간에서떨어진거리.cpp" />
+    <ClCompile Include="중복값찾.cpp" />
+    <ClCompile Include="중복제거.cpp" />
+    <ClCompile Include="카드종류.cpp" />
+    <ClCompile Include="카운팅값.cpp" />
     <ClCompile Include="칸씩누적합.cpp" />
     <ClCompile Include="컬러찾기.cpp" />
+    <ClCompile Include="하마의충치.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
