--- a/CodingTest/훈련1/훈련1.vcxproj
+++ b/CodingTest/훈련1/훈련1.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="0까지나누기.cpp" />
     <ClCompile Include="direct.cpp" />
     <ClCompile Include="min값인덱스.cpp" />
     <ClCompile Include="M찾기.cpp" />
@@ -134,7 +135,11 @@
     <ClCompile Include="값찾기.cpp" />
     <ClCompile Include="거리구하기.cpp" />
     <ClCompile Include="거리이동.cpp" />
+    <ClCompile Include="겹치지않게.cpp" />
+    <ClCompile Include="계단.cpp" />
+    <ClCompile Include="계단글자.cpp" />
     <ClCompile Include="글자바꾸기.cpp" />
+    <ClCompile Include="글자반나누기.cpp" />
     <ClCompile Include="글자수.cpp" />
     <ClCompile Include="금고털이.cpp" />
     <ClCompile Include="기차에서우리팀.cpp" />
@@ -142,8 +147,11 @@
     <ClCompile Include="꼬리찾기.cpp" />
     <ClCompile Include="누적점핑.cpp" />
     <ClCompile Include="누적합.cpp" />
+    <ClCompile Include="다섯글자.cpp" />
     <ClCompile Include="다수.cpp" />
     <ClCompile Include="대상발표.cpp" />
+    <ClCompile Include="두배열merge.cpp" />
+    <ClCompile Include="두칸씩.cpp" />
     <ClCompile Include="라인색칠.cpp" />
     <ClCompile Include="마스킹존재여부.cpp" />
     <ClCompile Include="마스킹출력.cpp" />
@@ -162,12 +170,17 @@
     <ClCompile Include="사각형출력.cpp" />
     <ClCompile Include="새포판별.cpp" />
     <ClCompile Include="시그마.cpp" />
+    <ClCompile Include="알파벳계단.cpp" />
     <ClCompile Include="알파벳정렬.cpp" />
     <ClCompile Include="알파벳카운트.cpp" />
     <ClCompile Include="양쪽수거리구하기.cpp" />
     <ClCompile Include="없는숫자.cpp" />
     <ClCompile Include="용의자찾기.cpp" />
+    <ClCompile Include="원하는패턴.cpp" />
     <ClCompile Include="유령존재.cpp" />
+    <ClCompile Include="재귀기초.cpp" />
+    <ClCompile Include="재귀부메랑.cpp" />
+    <ClCompile Include="재귀호출특징.cpp" />
     <ClCompile Include="저격sum.cpp" />
     <ClCompile Include="존재여부.cpp" />
     <ClCompile Include="주소넘기기.cpp" />
