--- a/CodingTest/훈련1/훈련1.vcxproj
+++ b/CodingTest/훈련1/훈련1.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="글자바꾸기.cpp" />
     <ClCompile Include="글자반나누기.cpp" />
     <ClCompile Include="글자수.cpp" />
+    <ClCompile Include="글자수만큼.cpp" />
     <ClCompile Include="금고털이.cpp" />
     <ClCompile Include="기차에서우리팀.cpp" />
     <ClCompile Include="기차칸찾기.cpp" />
@@ -155,14 +156,21 @@
     <ClCompile Include="라인색칠.cpp" />
     <ClCompile Include="마스킹존재여부.cpp" />
     <ClCompile Include="마스킹출력.cpp" />
+    <ClCompile Include="마우스동작.cpp" />
     <ClCompile Include="많은수.cpp" />
     <ClCompile Include="몇층.cpp" />
+    <ClCompile Include="몇칸이동.cpp" />
+    <ClCompile Include="모델위치.cpp" />
     <ClCompile Include="모양넣기.cpp" />
+    <ClCompile Include="문자양옆#.cpp" />
+    <ClCompile Include="문자열비교.cpp" />
     <ClCompile Include="문자제거.cpp" />
     <ClCompile Include="문장추가.cpp" />
+    <ClCompile Include="바둑게임.cpp" />
     <ClCompile Include="방향합.cpp" />
     <ClCompile Include="범위안에존재여부.cpp" />
     <ClCompile Include="범위정하기.cpp" />
+    <ClCompile Include="브랜치.cpp" />
     <ClCompile Include="블랙리스트.cpp" />
     <ClCompile Include="비밀번호.cpp" />
     <ClCompile Include="비트배열합.cpp" />
@@ -178,16 +186,20 @@
     <ClCompile Include="용의자찾기.cpp" />
     <ClCompile Include="원하는패턴.cpp" />
     <ClCompile Include="유령존재.cpp" />
+    <ClCompile Include="재귀3번.cpp" />
     <ClCompile Include="재귀기초.cpp" />
+    <ClCompile Include="재귀는몇번.cpp" />
     <ClCompile Include="재귀부메랑.cpp" />
     <ClCompile Include="재귀호출특징.cpp" />
     <ClCompile Include="저격sum.cpp" />
     <ClCompile Include="존재여부.cpp" />
     <ClCompile Include="주소넘기기.cpp" />
     <ClCompile Include="중간에서떨어진거리.cpp" />
+    <ClCompile Include="중력문제.cpp" />
     <ClCompile Include="중복값찾.cpp" />
     <ClCompile Include="중복제거.cpp" />
     <ClCompile Include="카드종류.cpp" />
+    <ClCompile Include="카운드정렬.cpp" />
     <ClCompile Include="카운팅값.cpp" />
     <ClCompile Include="칸씩누적합.cpp" />
     <ClCompile Include="컬러찾기.cpp" />
